Step 15: Tagging links

--- a/app/views/links.erb
+++ b/app/views/links.erb
@@ -5,6 +5,7 @@
 		<li>
 			Title: <%= link.title %>
 			URL: <%= link.url %>
+			Tags: <%= link.tags %>  <!--no tags value -->
 		</li>
 	<% end %>
 </ul>
