--- a/app/views/new.erb
+++ b/app/views/new.erb
@@ -4,7 +4,9 @@
 	Title: <br>
 	<input type="text" name="title"><br>
 	URL: <br>
-	<input type="text" name="url">
+	<input type="text" name="url"><br>
+	Tags: <br>
+	<input type="text" name="tags">
 	<br>
 	<input type="submit" value="Submit">
 </form>
