--- a/app/views/links.erb
+++ b/app/views/links.erb
@@ -5,7 +5,9 @@
 		<li>
 			Title: <%= link.title %>
 			URL: <%= link.url %>
-			Tags: <%= link.tags %>  <!--no tags value -->
+			<% link.tags.each do |tag| %>
+			Tags: <%= tag.name %>
+			<% end %>
 		</li>
 	<% end %>
 </ul>
