--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -4,7 +4,9 @@
 	Email: <br>
 	<input type="text" name="email"><br>
 	Password: <br>
-	<input type="text" name="password"><br>
+	<input type="password" name="password"><br>
+	Re-enter Password: <br>
+	<input type="password" name="password_confirmation"><br>
 	<br>
 	<input type="submit" value="Sign up">
 </form>
