Challenge 21: Added user authentication

--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -4,8 +4,11 @@
 		<title>Bookmark Manager</title>
 	</head>
 	<body>
+		<% if flash[:notice] %>
+			<div id="flash"><%= flash[:notice] %></div>
+		<% end %>
 		<% if current_user %>
-		<h1>Welcome, <%= current_user.email %></h1>
+			<h1>Welcome, <%= current_user.email %></h1>
 		<% end %>
 		<%= yield %>
 	</body>
