--- a/app/views/signup.erb
+++ b/app/views/signup.erb
@@ -2,7 +2,7 @@
 
 <form action="/users" method="post">
 	Email: <br>
-	<input type="text" name="email" value="<%= @user_email %>"><br>
+	<input type="text" name="email" value="<%= @user_email %>" required><br>
 	Password: <br>
 	<input type="password" name="password"><br>
 	Re-enter Password: <br>
